@@ -1,5 +1,13 @@
 2005-08-17  Jacob Smullyan  <smulloni@smullyan.org>
 
+	* src/pydo/dbi.py (DBIBase): adding initFunc parameter to
+	base DBI class constructor and connect(); (_real_connect,
+	initAlias): initFunc parameter to _real_connect and init parameter
+	to initAlias.
+
+	* src/pydo/drivers: (all concrete DBI classes): adding
+	initFunc parameter to drivers.
+
 	* src/pydo/dbi.py (_real_connect): preparation for on-connect
 	custom initializers.
 
